# whois-notify

./: .gitignore  .travis.yml  Cargo.toml  log.txt  result.txt
src/: main.rs  servers.json
