[package]
name = "domain"
version = "0.1.0"
authors = ["Vignesh Kumar <xxvignesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
fern = "0.6.0"
filecmp = "0.2.0"
job_scheduler = "*"
log = "0.4.11"
notify-rust = "4"
regex = "1.4.2"
whois-rust = "1.2.3"
